--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
+DATABASE_URL="postgresql://lobinda:lobinda@localhost:9487/GYMTest?schema=public"
+NODE_ENV=dev
+
 # PostgreSQL 容器設定
-POSTGRES_USER=testHexschool
-POSTGRES_PASSWORD=pgStartkit4test
-POSTGRES_DB=test
+POSTGRES_USER=lobinda   
+POSTGRES_PASSWORD=lobinda
+POSTGRES_DB=GYMTest
 
 # API 伺服器設定
-DB_HOST=postgres
+DB_HOST=localhost
 # 本地連接請改成localhost
 # DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=testHexschool
-DB_PASSWORD=pgStartkit4test
-DB_DATABASE=test
-PORT=8080
+DB_PORT=9487
+DB_USERNAME=lobinda
+DB_PASSWORD=lobinda
+DB_DATABASE=GYMTest
+PORT=2343
+
