--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
+    "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "nodemon": "^3.1.9",
     "prettier": "^2.8.1",
@@ -38,14 +38,17 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^6.7.0",
+    "fs": "^0.0.1-security",
     "helmet": "^8.0.0",
     "moment": "^2.29.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/server.ts\"",
@@ -53,7 +56,12 @@
     "dbStart": "docker compose --env-file .env up -d --build",
     "dbRestart": "docker compose --env-file .env up --force-recreate --build -d",
     "dbStop": "docker compose --env-file .env stop",
-    "dbClean": "docker compose --env-file .env down -v"
+    "dbClean": "docker compose --env-file .env down -v",
+    "db:generate": "prisma migrate dev",
+    "db:migrate": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "author": "lobinda",
   "license": "ISC",
