--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL="postgresql://lobinda:lobinda@localhost:9487/GYMTest?schema=public"
-NODE_ENV=dev
-
+NODE_ENV=public
+DEVURL="http://localhost"
 # PostgreSQL 容器設定
 POSTGRES_USER=lobinda   
 POSTGRES_PASSWORD=lobinda
