--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.19.75",
     "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.7",
-    "@types/supertest": "^2.0.12",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -21,10 +22,12 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^13.1.0",
     "nodemon": "^3.1.9",
     "prettier": "^2.8.1",
     "prisma": "^4.10.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
   },
@@ -33,6 +36,7 @@
     "@types/helmet": "^4.0.0",
     "@types/nodemailer": "^6.4.7",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -45,6 +49,7 @@
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
@@ -53,6 +58,7 @@
   "scripts": {
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/server.ts\"",
     "lint": "eslint src/**/*.ts --fix",
+    "test": "jest",
     "dbStart": "docker compose --env-file .env up -d --build",
     "dbRestart": "docker compose --env-file .env up --force-recreate --build -d",
     "dbStop": "docker compose --env-file .env stop",
@@ -62,6 +68,17 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{css,scss,md,json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "author": "lobinda",
   "license": "ISC",
