--- a/.github/workflows/APITest.yml
+++ b/.github/workflows/APITest.yml
@@ -39,7 +39,7 @@ jobs:
       - name: 安裝相依套件
         run: npm ci
       - name: 啟動 API 伺服器
-        run: node server.js &
+        run: npm run dev &
         env:
           DB_HOST: localhost
           DB_PORT: 5432
