--- a/.github/workflows/APITest.yml
+++ b/.github/workflows/APITest.yml
@@ -6,6 +6,7 @@ on:
     branches: [main]
 
 env:
+  DATABASE_URL:postgresql://lobinda:lobinda@localhost:9924/GYMTest?schema=public
   DB_USERNAME: lobinda
   DB_PASSWORD: lobinda
   DB_DATABASE: GYMTest
