--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,13 @@
     "sourceType": "module"
   },
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
     "require-await": "error",
     "prettier/prettier": [
       "error",
